# bunny

./: .gitignore  Cargo.toml  LICENSE  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
crates/bunny/: Cargo.toml  README.md
crates/bunny-mdx/: Cargo.toml  README.md
crates/bunny-mdx-node/: Cargo.toml  index.d.ts  index.js  package.json  test.js
crates/bunny-mdx-node/src/: lib.rs
crates/bunny-mdx/src/: lib.rs
crates/bunny-mdx/src/codegen/: context.rs  escape.rs  jsx_value.rs  renderer.rs
crates/bunny-mdx/src/frontmatter/: parser.rs
crates/bunny-mdx/src/nodes/: block.rs  code.rs  inline.rs  list.rs  mdx.rs  mod.rs  table.rs
crates/bunny-mdx/src/plugins/: heading_ids.rs  image_optimization.rs  link_validation.rs  mod.rs
crates/bunny-wasm/: Cargo.toml  LICENSE  README.md  jsr.json  justfile  mod.ts
crates/bunny-wasm/src/: error.rs  lib.rs
crates/bunny-wasm/tests/: browser.rs  error_handling.rs
crates/bunny/src/: lib.rs  types.rs
crates/bunny/src/bundler/: mod.rs  types.rs
examples/blog-axum/: Cargo.toml  README.md
examples/blog-axum/src/: main.rs  mdx.rs
examples/next-wasm/: .gitignore  README.md  instrumentation.ts  next.config.mjs  package.json  tsconfig.json
examples/next-wasm/app/: global.css  layout.tsx  page.tsx
examples/next-wasm/app/blog/: page.tsx
examples/next-wasm/app/blog/[slug]/: page.tsx
examples/next-wasm/app/blog/posts/: advanced-features.mdx  getting-started.mdx  performance-tips.mdx
examples/next-wasm/app/cached/: page.tsx
examples/next-wasm/app/remote/: page.tsx
examples/next-wasm/app/server/: page.tsx
examples/next-wasm/components/: BlogCard.tsx  FeatureCard.tsx  Navigation.tsx
examples/next-wasm/components/mdx/: Button.tsx  Callout.tsx  Counter.tsx  index.ts
examples/next-wasm/lib/: posts.ts
