[package]
name = "bunny-mdx-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js bindings for bunny-mdx compiler (core compiler only, no bundler)"

[package.metadata.napi]
name = "bunny-mdx-node"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use bunny-mdx core compiler (no bundler or rolldown features)
bunny-mdx = { path = "../bunny-mdx" }

# NAPI bindings (v3 has good defaults, no need for manual features)
napi.workspace = true
napi-derive.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true

[build-dependencies]
napi-build = "2.3.0"
