[package]
name = "bunny-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASM bindings for bunny-mdx - compile MDX to JSX in the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wee_alloc = ["dep:wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
# Core Bunny MDX compiler (ONLY dependency - no bundler!)
bunny-mdx = { path = "../bunny-mdx" }

# WASM bindings
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

# Serialization for options and results
serde = { workspace = true }
serde_json = { workspace = true }  # Used for frontmatter data

# Optional features
wee_alloc = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# wasm-opt optimizations for production builds
wasm-opt = [
    "-Oz",                                  # Aggressive size optimization
    "--enable-bulk-memory",                 # Enable bulk memory operations
    "--enable-nontrapping-float-to-int",    # Enable non-trapping conversions
    "--enable-sign-ext",                    # Enable sign extension
    "--enable-mutable-globals",             # Enable mutable globals
]

